--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
